JDK9 support
ANC, report, issue coverage improvements.